          (thanks to Kai HTML).
- TW-1935 Separate verbosity category for rc overrides
          (thanks to Paul J. Fenwick)
- TW-1936 Tweak tests to have fuller TAP compliance
          (thanks to Paul J. Fenwick)
- TW-1938 Adjust behaviour of new-uuid and new-id verbosity levels
          (thanks to Paul J. Fenwick)
- TW-1947 "urgency.over" filter seems to not work correct
          (thanks to Marc Richter).
- Added 'juhannus' as a synonym for 'midsommarafton'
          (thanks to Lynoure Braakman).
- Deprecated the 'DUETODAY' virtual tag, which is a synonym for the 'TODAY'
  virtual tag.
- Removed deprecated 'alias._query' setting.
- Fixed ambiguity in the esp-ESP localization
          (thanks to Fidel Mato).
- Deprecated the 'new-uuid' verbosity option, since its functionality can be
  removed by merging with 'new-id'.
- Correct a false-positive warning when a due date is removed and a wait is
  added.
- Added 'QUARTER' virtual tag.
- Fixed unquoted glob in bash completion script
          (thanks to Ran Benita).
- Deprecated use of alternate Boolean configuration settings. Use values "0" for
  off, and "1" for on. Avoid used of "on", "off", "true", "t", "false", "f",
  "yes", "y", "no", "n".
- Fixed test harness for Python 3.x.
          (thanks to jrabbit).
- Improved certificate validation diagnostics
          (thanks to Jelle van der Waa).
- Improved portability for SunOS-like OSes.
          (thanks to Antonio Huete Jimenez).
- Updated the 'timesheet' command with a more compact report that accepts a
  filter, and has a default filter showing the last four weeks of completed and
  started tasks.
- Added 'history.weekly', 'history.daily', 'ghistory.weekly', 'ghistory.daily'
  report variations, with code refactoring.
          (thanks to Lukas Barth).
- New DOM references: annotations.count, tw.syncneeded, tw.program, tw.args,
  tw.width, tw.height, tw.version.
- The message telling you to sync now indicates how many local changes will be
  synced.